Package_Tools/include-C/llvm-c-20/llvm-c/in_arbeit/pas/Core.pas


 }
{ clang-format on }
{*
 * @defgroup LLVMCCoreValueGeneral General APIs
 *
 * Functions in this section work on all LLVMValueRef instances,
 * regardless of their sub-type. They correspond to functions available
 * on llvm::Value.
 *
 * @
  }
{*
 * Obtain the type of a value.
 *
 * @see llvm::Value::getType()
  }
function LLVMTypeOf(Val:TLLVMValueRef):TLLVMTypeRef;cdecl;external libllvm;
{*
 * Obtain the enumerated type of a Value instance.
 *
 * @see llvm::Value::getValueID()
  }
function LLVMGetValueKind(Val:TLLVMValueRef):TLLVMValueKind;cdecl;external libllvm;
{*
 * Obtain the string name of a value.
 *
 * @see llvm::Value::getName()
  }
function LLVMGetValueName2(Val:TLLVMValueRef; Length:Psize_t):Pchar;cdecl;external libllvm;
{*
 * Set the string name of a value.
 *
 * @see llvm::Value::setName()
  }
procedure LLVMSetValueName2(Val:TLLVMValueRef; Name:Pchar; NameLen:Tsize_t);cdecl;external libllvm;
{*
 * Dump a representation of a value to stderr.
 *
 * @see llvm::Value::dump()
  }
procedure LLVMDumpValue(Val:TLLVMValueRef);cdecl;external libllvm;
{*
 * Return a string representation of the value. Use
 * LLVMDisposeMessage to free the string.
 *
 * @see llvm::Value::print()
  }
function LLVMPrintValueToString(Val:TLLVMValueRef):Pchar;cdecl;external libllvm;
{*
 * Obtain the context to which this value is associated.
 *
 * @see llvm::Value::getContext()
  }
function LLVMGetValueContext(Val:TLLVMValueRef):TLLVMContextRef;cdecl;external libllvm;
{*
 * Return a string representation of the DbgRecord. Use
 * LLVMDisposeMessage to free the string.
 *
 * @see llvm::DbgRecord::print()
  }
function LLVMPrintDbgRecordToString(_Record:TLLVMDbgRecordRef):Pchar;cdecl;external libllvm;
{*
 * Replace all uses of a value with another one.
 *
 * @see llvm::Value::replaceAllUsesWith()
  }
procedure LLVMReplaceAllUsesWith(OldVal:TLLVMValueRef; NewVal:TLLVMValueRef);cdecl;external libllvm;
{*
 * Determine whether the specified value instance is constant.
  }
function LLVMIsConstant(Val:TLLVMValueRef):TLLVMBool;cdecl;external libllvm;
{*
 * Determine whether a value instance is undefined.
  }
function LLVMIsUndef(Val:TLLVMValueRef):TLLVMBool;cdecl;external libllvm;
{*
 * Determine whether a value instance is poisonous.
  }
function LLVMIsPoison(Val:TLLVMValueRef):TLLVMBool;cdecl;external libllvm;
{*
#define LLVM_DECLARE_VALUE_CAST(name) \
  LLVMValueRef LLVMIsA##name(LLVMValueRef Val);
LLVM_FOR_EACH_VALUE_SUBCLASS(LLVM_DECLARE_VALUE_CAST)
  }
function LLVMIsAMDNode(Val:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
function LLVMIsAValueAsMetadata(Val:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
function LLVMIsAMDString(Val:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
{* Deprecated: Use LLVMGetValueName2 instead.  }
function LLVMGetValueName(Val:TLLVMValueRef):Pchar;cdecl;external libllvm;
{* Deprecated: Use LLVMSetValueName2 instead.  }
procedure LLVMSetValueName(Val:TLLVMValueRef; Name:Pchar);cdecl;external libllvm;
{*
 * @
  }
{*
 * @defgroup LLVMCCoreValueUses Usage
 *
 * This module defines functions that allow you to inspect the uses of a
 * LLVMValueRef.
 *
 * It is possible to obtain an LLVMUseRef for any LLVMValueRef instance.
 * Each LLVMUseRef (which corresponds to a llvm::Use instance) holds a
 * llvm::User and llvm::Value.
 *
 * @
  }
{*
 * Obtain the first use of a value.
 *
 * Uses are obtained in an iterator fashion. First, call this function
 * to obtain a reference to the first use. Then, call LLVMGetNextUse()
 * on that instance and all subsequently obtained instances until
 * LLVMGetNextUse() returns NULL.
 *
 * @see llvm::Value::use_begin()
  }
function LLVMGetFirstUse(Val:TLLVMValueRef):TLLVMUseRef;cdecl;external libllvm;
{*
 * Obtain the next use of a value.
 *
 * This effectively advances the iterator. It returns NULL if you are on
 * the final use and no more are available.
  }
function LLVMGetNextUse(U:TLLVMUseRef):TLLVMUseRef;cdecl;external libllvm;
{*
 * Obtain the user value for a user.
 *
 * The returned value corresponds to a llvm::User type.
 *
 * @see llvm::Use::getUser()
  }
function LLVMGetUser(U:TLLVMUseRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain the value this use corresponds to.
 *
 * @see llvm::Use::get().
  }
function LLVMGetUsedValue(U:TLLVMUseRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * @
  }
{*
 * @defgroup LLVMCCoreValueUser User value
 *
 * Function in this group pertain to LLVMValueRef instances that descent
 * from llvm::User. This includes constants, instructions, and
 * operators.
 *
 * @
  }
{*
 * Obtain an operand at a specific index in a llvm::User value.
 *
 * @see llvm::User::getOperand()
  }
function LLVMGetOperand(Val:TLLVMValueRef; Index:dword):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain the use of an operand at a specific index in a llvm::User value.
 *
 * @see llvm::User::getOperandUse()
  }
function LLVMGetOperandUse(Val:TLLVMValueRef; Index:dword):TLLVMUseRef;cdecl;external libllvm;
{*
 * Set an operand at a specific index in a llvm::User value.
 *
 * @see llvm::User::setOperand()
  }
procedure LLVMSetOperand(User:TLLVMValueRef; Index:dword; Val:TLLVMValueRef);cdecl;external libllvm;
{*
 * Obtain the number of operands in a llvm::User value.
 *
 * @see llvm::User::getNumOperands()
  }
function LLVMGetNumOperands(Val:TLLVMValueRef):longint;cdecl;external libllvm;
{*
 * @
  }
{*
 * @defgroup LLVMCCoreValueConstant Constants
 *
 * This section contains APIs for interacting with LLVMValueRef that
 * correspond to llvm::Constant instances.
 *
 * These functions will work for any LLVMValueRef in the llvm::Constant
 * class hierarchy.
 *
 * @
  }
{*
 * Obtain a constant value referring to the null instance of a type.
 *
 * @see llvm::Constant::getNullValue()
  }
function LLVMConstNull(Ty:TLLVMTypeRef):TLLVMValueRef;cdecl;external libllvm;
{ all zeroes  }
{*
 * Obtain a constant value referring to the instance of a type
 * consisting of all ones.
 *
 * This is only valid for integer types.
 *
 * @see llvm::Constant::getAllOnesValue()
  }
function LLVMConstAllOnes(Ty:TLLVMTypeRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain a constant value referring to an undefined value of a type.
 *
 * @see llvm::UndefValue::get()
  }
function LLVMGetUndef(Ty:TLLVMTypeRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain a constant value referring to a poison value of a type.
 *
 * @see llvm::PoisonValue::get()
  }
function LLVMGetPoison(Ty:TLLVMTypeRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Determine whether a value instance is null.
 *
 * @see llvm::Constant::isNullValue()
  }
function LLVMIsNull(Val:TLLVMValueRef):TLLVMBool;cdecl;external libllvm;
{*
 * Obtain a constant that is a constant pointer pointing to NULL for a
 * specified type.
  }
function LLVMConstPointerNull(Ty:TLLVMTypeRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * @defgroup LLVMCCoreValueConstantScalar Scalar constants
 *
 * Functions in this group model LLVMValueRef instances that correspond
 * to constants referring to scalar types.
 *
 * For integer types, the LLVMTypeRef parameter should correspond to a
 * llvm::IntegerType instance and the returned LLVMValueRef will
 * correspond to a llvm::ConstantInt.
 *
 * For floating point types, the LLVMTypeRef returned corresponds to a
 * llvm::ConstantFP.
 *
 * @
  }
{*
 * Obtain a constant value for an integer type.
 *
 * The returned value corresponds to a llvm::ConstantInt.
 *
 * @see llvm::ConstantInt::get()
 *
 * @param IntTy Integer type to obtain value of.
 * @param N The value the returned instance should refer to.
 * @param SignExtend Whether to sign extend the produced value.
  }
function LLVMConstInt(IntTy:TLLVMTypeRef; N:qword; SignExtend:TLLVMBool):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain a constant value for an integer of arbitrary precision.
 *
 * @see llvm::ConstantInt::get()
  }
function LLVMConstIntOfArbitraryPrecision(IntTy:TLLVMTypeRef; NumWords:dword; Words:Puint64_t):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain a constant value for an integer parsed from a string.
 *
 * A similar API, LLVMConstIntOfStringAndSize is also available. If the
 * string's length is available, it is preferred to call that function
 * instead.
 *
 * @see llvm::ConstantInt::get()
  }
function LLVMConstIntOfString(IntTy:TLLVMTypeRef; Text:Pchar; Radix:Tuint8_t):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain a constant value for an integer parsed from a string with
 * specified length.
 *
 * @see llvm::ConstantInt::get()
  }
function LLVMConstIntOfStringAndSize(IntTy:TLLVMTypeRef; Text:Pchar; SLen:dword; Radix:Tuint8_t):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain a constant value referring to a double floating point value.
  }
function LLVMConstReal(RealTy:TLLVMTypeRef; N:Tdouble):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain a constant for a floating point value parsed from a string.
 *
 * A similar API, LLVMConstRealOfStringAndSize is also available. It
 * should be used if the input string's length is known.
  }
function LLVMConstRealOfString(RealTy:TLLVMTypeRef; Text:Pchar):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain a constant for a floating point value parsed from a string.
  }
function LLVMConstRealOfStringAndSize(RealTy:TLLVMTypeRef; Text:Pchar; SLen:dword):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain the zero extended value for an integer constant value.
 *
 * @see llvm::ConstantInt::getZExtValue()
  }
function LLVMConstIntGetZExtValue(ConstantVal:TLLVMValueRef):qword;cdecl;external libllvm;
{*
 * Obtain the sign extended value for an integer constant value.
 *
 * @see llvm::ConstantInt::getSExtValue()
  }
function LLVMConstIntGetSExtValue(ConstantVal:TLLVMValueRef):int64;cdecl;external libllvm;
{*
 * Obtain the double value for an floating point constant value.
 * losesInfo indicates if some precision was lost in the conversion.
 *
 * @see llvm::ConstantFP::getDoubleValue
  }
function LLVMConstRealGetDouble(ConstantVal:TLLVMValueRef; losesInfo:PLLVMBool):Tdouble;cdecl;external libllvm;
{*
 * @
  }
{*
 * @defgroup LLVMCCoreValueConstantComposite Composite Constants
 *
 * Functions in this group operate on composite constants.
 *
 * @
  }
{*
 * Create a ConstantDataSequential and initialize it with a string.
 *
 * @deprecated LLVMConstStringInContext is deprecated in favor of the API
 * accurate LLVMConstStringInContext2
 * @see llvm::ConstantDataArray::getString()
  }
function LLVMConstStringInContext(C:TLLVMContextRef; Str:Pchar; Length:dword; DontNullTerminate:TLLVMBool):TLLVMValueRef;cdecl;external libllvm;
{*
 * Create a ConstantDataSequential and initialize it with a string.
 *
 * @see llvm::ConstantDataArray::getString()
  }
function LLVMConstStringInContext2(C:TLLVMContextRef; Str:Pchar; Length:Tsize_t; DontNullTerminate:TLLVMBool):TLLVMValueRef;cdecl;external libllvm;
{*
 * Create a ConstantDataSequential with string content in the global context.
 *
 * This is the same as LLVMConstStringInContext except it operates on the
 * global context.
 *
 * @see LLVMConstStringInContext()
 * @see llvm::ConstantDataArray::getString()
  }
function LLVMConstString(Str:Pchar; Length:dword; DontNullTerminate:TLLVMBool):TLLVMValueRef;cdecl;external libllvm;
{*
 * Returns true if the specified constant is an array of i8.
 *
 * @see ConstantDataSequential::getAsString()
  }
function LLVMIsConstantString(c:TLLVMValueRef):TLLVMBool;cdecl;external libllvm;
{*
 * Get the given constant data sequential as a string.
 *
 * @see ConstantDataSequential::getAsString()
  }
function LLVMGetAsString(c:TLLVMValueRef; Length:Psize_t):Pchar;cdecl;external libllvm;
{*
 * Create an anonymous ConstantStruct with the specified values.
 *
 * @see llvm::ConstantStruct::getAnon()
  }
function LLVMConstStructInContext(C:TLLVMContextRef; ConstantVals:PLLVMValueRef; Count:dword; Packed:TLLVMBool):TLLVMValueRef;cdecl;external libllvm;
